package com.company.booking.entity;

public enum BookingStatus {
    SCHEDULED,
    COMPLETED,
    CANCELLED
}
