package com.company.booking.entity;

public enum Role {
    USER,
    ADMIN
}
